      of particles into boolean mask grids.
    - Added convenience functions particlesToSdf(), particleTrailsToSdf(),
      particlesToMask() and particleTrailsToMask() for common particle
      rasterization use cases.

    Improvements:
    - Improved the responsiveness of the mesh to volume converter to
      interrupt requests.

    Houdini:
    - Added an option to the Visualize SOP to display leaf nodes as points.
    - Renamed the Visualize SOP's "leafmode", "internalmode", "tilemode"
      and "voxelmode" parameters to "leafstyle", "internalstyle", etc.
      and converted them from ordinal to string-valued.
    - Made various improvements to viewport rendering of point data grids.
      [Contributed by Nick Avramoussis]


Version 5.2.0 - August 13, 2018

    New features:
    - Added tools to advect points stored in point data grids
      through velocity fields.
      [Contributed by Dan Bailey]
    - For point data grids, voxel data can now be prefetched independently
      of position or other attributes.
      [Contributed by Dan Bailey]
    - Added tools to sample voxel values onto points stored in
      point data grids.
      [Contributed by Double Negative]

    Improvements:
    - The UniformPointScatter tool now generates points in "points per volume"
      mode even when the product of the density and the voxel volume is less
      than one, and the point count now varies continuously with the density.
    - Added a min/max sphere count argument to the fillWithSpheres() tool.
      (The previous version, now deprecated, supported only a maximum
      sphere count.)
    - Added a method to tools::LevelSetTracker to enable and disable
      trimming of voxels outside the narrow band.
      Previously, trimming was always enabled, which caused dense SDFs
      to be converted to narrow-band level sets.
    - Added state() methods to point data index filters to improve
      optimization opportunities.
      [Contributed by Dan Bailey]