@@ -15,6 +15,8 @@ Version 5.2.1 - In development
       interrupt requests.
 
     Houdini:
+    - The Convert and To Polygons SOPs now correctly transfer vertex
+      attributes when the output is a polygon soup.
     - Added an option to the Visualize SOP to display leaf nodes as points.
     - Renamed the Visualize SOP's "leafmode", "internalmode", "tilemode"
       and "voxelmode" parameters to "leafstyle", "internalstyle", etc.
